k8s-manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eva-webservices-new
  labels:
    app: eva-webservices-new
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: eva-webservices-new
